# instagram-bot-api

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: README.md
src/instagram-bot-api/: bot_beta.py  login.py  time_util.py
src/instagrambotapi/: bot.py  cache.py  login.py  login_actions.py  mymerge.py  scraper.py  selenium_driver.py  senddm.py  unfollow.py
src/instagrambotapi_legacy/: bot_beta.py  login.py  scrape_post.js  scraper.py  time_util.py
test/: loop.py  pyth_class_test.py  startbot.py  test.py  testcache.py
