[metadata]
name = instagram-bot-api
version = 0.9
author = Nicolò Valenza
author_email = nico.vale.spazio@gmail.com
description = Un API per instagram
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/valenzanico/instagram-bot-api
project_urls =
    Bug Tracker = https://github.com/valenzanico/instagram-bot-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src